Revision history for Dist-Zilla-PluginBundle-IDOPEREL

{{$NEXT}}

1.000000  2014-02-26 19:47:28+02:00 Asia/Jerusalem
	- Replaced GithubMeta with GitHub::Meta
	- Small changes to the minting profile

0.701     2011-07-19 20:56:57 Asia/Jerusalem
	- Fixed bug with new version of Dist::Zilla::Plugin::AutoPrereqs causing it to fail

0.700     2011-03-28 20:27:14 Asia/Jerusalem
	- Not using "version" anymore, it's only causing problems

v0.600.5  2011-03-23 23:21:39 Asia/Jerusalem
	- Plugin::GithubMeta was mistakenly unused
	- Changed "tag_format" and "tag_message" options for the Git bundle
	- Not using "qv" to declare version numbers as it seems it is unrecommended
	  by the version module
	- Added a 00-load.t test

v0.600.4  2011-03-22 23:34:10 Asia/Jerusalem
	- Added version to MintingProfile::IDOPEREL and removed version declarations
	  from the BEGIN block as it may have caused the CPAN indexer to fail.

v0.600.3  2011-03-22 22:42:22 Asia/Jerusalem
	- Created a default minting profile for usage with "dzil new"

v0.600.2  2011-03-22 00:36:19 Asia/Jerusalem
	- Using Role::PluginBundle::Easy
	- Fixed: Plugin::PkgVersion wasn't properly removed from the bundle
	- Fixed: Plugin::Prereqs wasn't adding the 'version' module to configure_requires

v0.600.1  2011-03-22 00:00:41 Asia/Jerusalem
	- Moved version declaration to same line as "use version", as per
	  version's documentation
	- Added Plugin::Prereqs in order to add the version module to the
	  configure_requires sections, as per version's documentation

v0.600.0  2011-03-21 23:46:59 Asia/Jerusalem
	- Added Plugin::InstallGuide
	- Added Plugin::VersionFromModule in favor of Plugin::PkgVersion so I
	  could use the version module for versioning

0.5       2011-03-14 22:08:43 Asia/Jerusalem
	- Removed Plugin::LatestPrereqs as it's not ready yet (enforces core
	  modules which is bad)
	- Added Plugin::Signature

0.4       2010-12-28 16:10:03 Asia/Jerusalem
	- Added Plugin::LatestPrereqs
