@@ -2,12 +2,11 @@ name     = Dist-Zilla-PluginBundle-IDOPEREL
 author   = Ido Perlmuter <ido@ido50.net>
 license  = Perl_5
 copyright_holder = Ido Perlmuter
-copyright_year   = 2014
+copyright_year   = 2010-2016
 
 [@Filter]
 -bundle = @Basic
 -remove = Readme
--remove = MetaYAML
 
 [ModuleShareDirs]
 Dist::Zilla::MintingProfile::IDOPEREL = profiles
@@ -23,9 +22,16 @@ Dist::Zilla::MintingProfile::IDOPEREL = profiles
 [MetaJSON]
 [MinimumPerl]
 [NextRelease]
-[ReadmeFromPod]
 [TestRelease]
 [Signature]
+
+[ReadmeAnyFromPod]
+type = markdown
+filename = README.md
+location = build
+
+[CopyFilesFromBuild]
+copy = README.md
 
 [Encoding]
 encoding = bytes
