@@ -5,7 +5,7 @@ package Dist::Zilla::MintingProfile::IDOPEREL;
 use Moose;
 with 'Dist::Zilla::Role::MintingProfile::ShareDir';
 
-our $VERSION = "1.000000";
+our $VERSION = "1.001000";
 $VERSION = eval $VERSION;
 
 =head1 NAME
@@ -51,7 +51,7 @@ L<http://search.cpan.org/dist/Dist-Zilla-PluginBundle-IDOPEREL/>
 
 =head1 LICENSE AND COPYRIGHT
 
-Copyright 2010-2014 Ido Perlmuter.
+Copyright 2010-2016 Ido Perlmuter.
 
 This program is free software; you can redistribute it and/or modify it
 under the terms of either: the GNU General Public License as published
